2016-10-14  Natalia Portillo  <claunia@claunia.com>

	* Modes.cs: Added Apple OEM MODE page 30h.

2016-10-14  Natalia Portillo  <claunia@claunia.com>

	* EVPD.cs:
	* Modes.cs:
	* Inquiry.cs: Added HP vendor EVPD, MODE pages and INQUIRY
	fields.

2016-10-14  Natalia Portillo  <claunia@claunia.com>

	* EVPD.cs: Added EVPD pages B1h, B2h, B3h and B4h.

2016-10-13  Natalia Portillo  <claunia@claunia.com>

	* EVPD.cs: Added EVPD page B0h.

2016-10-13  Natalia Portillo  <claunia@claunia.com>

	* EVPD.cs:
	* Modes.cs:
	* Inquiry.cs: Added IBM vendor EVPD, MODE pages and INQUIRY
	fields.

2016-10-13  Natalia Portillo  <claunia@claunia.com>

	* Modes.cs: Added MODE PAGE 1Dh

2016-10-13  Natalia Portillo  <claunia@claunia.com>

	* EVPD.cs:
	* Modes.cs: Added Certance vendor mode pages 21h and 22h.

2016-10-13  Natalia Portillo  <claunia@claunia.com>

	* EVPD.cs: Added Certance vendor EVPD pages.

2016-10-13  Natalia Portillo  <claunia@claunia.com>

	* EVPD.cs:
	* Inquiry.cs: Added Quantum vendor INQUIRY values and EVPD
	page C0h.

2016-10-13  Natalia Portillo  <claunia@claunia.com>

	* EVPD.cs: Added EVPD page 89h, SCSI to ATA translation layer

2016-10-13  Natalia Portillo  <claunia@claunia.com>

	* EVPD.cs: Updated page 85h to SPC-5.

2016-10-13  Natalia Portillo  <claunia@claunia.com>

	* EVPD.cs: Add EVPD page 85h, management network addresses.

2016-10-13  Natalia Portillo  <claunia@claunia.com>

	* EVPD.cs:
	* Enums.cs: Added EVPD page 81h, implemented operating
	definition page.

2016-10-13  Natalia Portillo  <claunia@claunia.com>

	* EVPD.cs:
	* Modes.cs:
	* Enums.cs: Updated EVPD Page 83h to SPC-5.

2016-10-13  Natalia Portillo  <claunia@claunia.com>

	* EVPD.cs: Added SCSI EVPD page 83h.

2016-10-13  Natalia Portillo  <claunia@claunia.com>

	* EVPD.cs: Implemented SCSI EVPD 82h

2016-10-13  Natalia Portillo  <claunia@claunia.com>

	* Modes.cs: Added support for SCSI MODE PAGEs 11h, 12h, 13h
	and 14h (medium partitions)
